WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114821
WebKit should not write WKPreferences to app user defaults when using the ObjC API
https://bugs.webkit.org/show_bug.cgi?id=114821
Summary
WebKit should not write WKPreferences to app user defaults when using the Obj...
Sam Weinig
Reported
2013-04-18 10:55:42 PDT
WebKit should not write WKPreferences to app user defaults when using the ObjC API
Attachments
Patch
(1.84 KB, patch)
2013-04-18 10:56 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2013-04-18 10:56:58 PDT
Created
attachment 198748
[details]
Patch
Sam Weinig
Comment 2
2013-04-18 10:57:17 PDT
<
rdar://problem/13593578
>
Anders Carlsson
Comment 3
2013-04-18 10:57:44 PDT
Comment on
attachment 198748
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=198748&action=review
> Source/WebKit2/UIProcess/API/mac/WKBrowsingContextGroup.mm:60 > + // don't get automatically written to the disk. The automattic writting has proven
Speling eror.
Sam Weinig
Comment 4
2013-04-18 10:59:19 PDT
Committed
r148686
: <
http://trac.webkit.org/changeset/148686
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug