WebKit should not write WKPreferences to app user defaults when using the ObjC API <rdar://problem/13593578> https://bugs.webkit.org/show_bug.cgi?id=114821

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKBrowsingContextGroup.mm:
(-[WKBrowsingContextGroup initWithIdentifier:]):
Use a identifier-less preferences for the ObjC-API. I think we will probably want this
to be the default for the C-API at some point as well, but Safari currently uses this
behavior.


Canonical link: https://commits.webkit.org/133208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148686 268f45cc-cd09-0410-ab3c-d52691b4dbfc