Source/WebKit2/UIProcess/API/mac/WKBrowsingContextGroup.mm
@@ -56,6 +56,12 @@
     _data = [[WKBrowsingContextGroupData alloc] init];
     _data->_pageGroupRef = adoptWK(WKPageGroupCreateWithIdentifier(adoptWK(WKStringCreateWithCFString((CFStringRef)identifier)).get()));
 
+    // Give the WKBrowsingContextGroup a identifier-less preferences, so that they
+    // don't get automatically written to the disk. The automattic writting has proven
+    // confusing to users of the API.
+    WKRetainPtr<WKPreferencesRef> preferences = adoptWK(WKPreferencesCreate());
+    WKPageGroupSetPreferences(_data->_pageGroupRef.get(), preferences.get());
+
     return self;
 }
 
